--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "url": "https://github.com/sudnonk/d3_threejs.git"
   },
   "dependencies": {
+    "@types/d3": "^5.0.0",
+    "@types/node": "^10.9.4",
+    "@types/three": "^0.92.18",
     "d3": "^5.7.0",
-    "three": "^0.96.0"
+    "three": "^0.96.0",
+    "tsc": "^1.20150623.0"
   }
 }
